Travel::Status::DE::IRIS 0.04 - Sat Jun 28 2014

    * Fix --track-via <stop> not matching trains changing their ID at <stop>
    * Add new (not entirely verified) IRIS delay and qos messages
    * IRIS: add serializable option. Use this if you intend to serialize
      the list returned by ->results
    * Do not errour out if only partial data is available, show partial data
      and a warning instead (closes #4)
    * Add several qos and delay messages

Travel::Status::DE::IRIS 0.03 - Fri Feb 14 2014

    * IRIS / db-iris: Add lookahead option
    * db-iris: Fix --via not matching destination of trains with incomplete
      route data
    * Detect and merge duplicate results caused by train ID changes
    * Result: Provide realtime data in ->platform, add ->sched_platform
      accessor
    * db-iris: indicate platform changes with an exclamation mark

Travel::Status::DE::IRIS 0.02 - Mon Feb 03 2014

    * Fix warnings when encountering unplanned (fchg-only) trains without
      arrival or departure platform
    * db-iris: add -V / --track-via option to display departure at start
      and expected arrival at a destination station
    * db-iris: Add -r / --realtime option to compute times using delay
      data
    * Result: Remove duplicates in qos_messages and delay_messages,
      return all messages in reverse order (newest first)

Travel::Status::DE::IRIS 0.01 - Fri Jan 24 2014

    * Initial release. Experimental, API may change without notice