@@ -3,41 +3,41 @@ abstract: 'Interface to IRIS based web departure monitors.'
 author:
   - 'Copyright (C) 2013-2014 by Daniel Friesel E<lt>derf@finalrewind.orgE<gt>'
 build_requires:
-  Test::Compile: 0
-  Test::Fatal: 0
-  Test::More: 0
-  Test::Pod: 0
+  Test::Compile: '0'
+  Test::Fatal: '0'
+  Test::More: '0'
+  Test::Pod: '0'
 configure_requires:
-  Module::Build: 0.4
+  Module::Build: '0.4'
 dynamic_config: 1
-generated_by: 'Module::Build version 0.4003, CPAN::Meta::Converter version 2.120921'
+generated_by: 'Module::Build version 0.421, CPAN::Meta::Converter version 2.142690'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
+  version: '1.4'
 name: Travel-Status-DE-IRIS
 provides:
   Travel::Status::DE::IRIS:
     file: lib/Travel/Status/DE/IRIS.pm
-    version: 0.04
+    version: '0.05'
   Travel::Status::DE::IRIS::Result:
     file: lib/Travel/Status/DE/IRIS/Result.pm
-    version: 0.04
+    version: '0.05'
   Travel::Status::DE::IRIS::Stations:
     file: lib/Travel/Status/DE/IRIS/Stations.pm
-    version: 0.04
+    version: '0.05'
 requires:
-  Carp: 0
-  Class::Accessor: 0
-  DateTime: 0
-  DateTime::Format::Strptime: 0
-  Encode: 0
-  Getopt::Long: 0
-  LWP::UserAgent: 0
-  List::MoreUtils: 0
-  List::Util: 0
-  XML::LibXML: 0
+  Carp: '0'
+  Class::Accessor: '0'
+  DateTime: '0'
+  DateTime::Format::Strptime: '0'
+  Encode: '0'
+  Getopt::Long: '0'
+  LWP::UserAgent: '0'
+  List::MoreUtils: '0'
+  List::Util: '0'
+  XML::LibXML: '0'
   perl: v5.14.2
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.04
+version: '0.05'
