@@ -15,15 +15,15 @@ not run its Makefile.PL or Build.PL.
 Hash: SHA512
 
 SHA1 f9e6b3455b9fdc96c4b906c8feee99e9747bb823 Build.PL
-SHA1 260ad92899176fdc1d83b399d156a078efb3c3d5 Changelog
-SHA1 d3ac903612d6ee05134ab99b8dee448584f12dab MANIFEST
-SHA1 454cc435e3eaae1c8fba4bca3e0a2ca2e6aa953b META.json
-SHA1 391b8706028154fde8f97674431acbc0d9e8c530 META.yml
+SHA1 559883fd361ce635b4d28b11c978362338be55e6 Changelog
+SHA1 9c107f61f2aa01bf74310b180bbd5ec249266bc1 MANIFEST
+SHA1 2b6e03775ca642da39c766f9cc6350db4d6c7f42 META.json
+SHA1 1de97757c854e2d806f542ea1be7099151d1337b META.yml
 SHA1 2e1294a78d89c05dd9034e3a617abec7a0edfc29 README
-SHA1 4d0c44b36bbbe96ea3f53b41d104192d3331e2d8 bin/db-iris
-SHA1 3ba800edc2bb67a035b1062da63b9451f6f3c0d8 lib/Travel/Status/DE/IRIS.pm
-SHA1 76155a839700fb91e88aadd6bd1ef2b98f54793f lib/Travel/Status/DE/IRIS/Result.pm
-SHA1 072252bbda9f6fb4dfd400cd1fc76e6c2d2b24a1 lib/Travel/Status/DE/IRIS/Stations.pm
+SHA1 52d7388897e6d1032a23715e9fdea83da269d8a9 bin/db-iris
+SHA1 fb79bf33b9c95284efd3ab6ef7b29302d8cb7077 lib/Travel/Status/DE/IRIS.pm
+SHA1 0db7e666249839d5b07632ab8545e382bd765010 lib/Travel/Status/DE/IRIS/Result.pm
+SHA1 e79b1b91b4d231dd43f51c02b5f6469b7587e893 lib/Travel/Status/DE/IRIS/Stations.pm
 SHA1 b5551b04e8bb5d033e6baea76cd5444d9fe7b1e7 scripts/acronyms.pl
 SHA1 536f10c8cf46a751727751db6aae68d9da21120d scripts/acronyms.sh
 SHA1 65c7499f6edef8101392c6e12dfd53333b54ace6 scripts/debug
@@ -55,17 +55,17 @@ SHA1 e2a5e36447b697146055ed814c024185a98cfa6b t/in/station/EE
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQIcBAEBCgAGBQJTrftqAAoJEBANW/tRZuAF8/kP/RIm0URk/afQqtoC9tOC0qUI
-/c79UZ8KgGlBGjaSz+m0/HQqA8ePvEG36dw3Oh3DZYC1CwkB1u6paemj65tur3qE
-s2+QyLhPfk2f0Y+mFU/vpXY+lyxF5rdcl+ThvJaAJju68v9T74fOI38snONuHzM8
-WHVZbHasqmX5f4atmsWDCu3d5h9GKHiXQj76DzWg3Y6XCsZxHclNrC0mZBhsghEE
-mAVwg/1G/3BpKx0ScVYiiMg2USlzx7o0FzhHAZuSfiL8Qr2hxQ68wPcHaPB+ZYe0
-+Xx+4N3aklOIxBJgS6wMtdc1dKBtDZUwHBAs6tHEsIYe8rMHABNa5uxk+fZDjOac
-nBgbO5DIZvLV5MaJXCsC+V3W6QBXiPBTpEt06bw9+Spijz7Afd310ZC46aZRGj9o
-aoDUH8eVFz3mrxn6sCDIUGN+qhFnUsd3gCWRm0CaER5o/hiiZ+KbtHhSBa1zt5lP
-7SBqd2y5r/FGKLFC16q6NdGcNpx6Xf0r3042wo1hSXaOCni3Sxz/jCZHUiQVyOfQ
-DzZ0L9TpFaTVCQfIl9IREPeqQxayPI7F0TNJ8oQAYN8cKhk2lexHNsS3tHrOl45f
-7JOp5vmjAJmq4hb/TKL/X2NeNp7QH4RoIhBN+M0ILXwnXtYHlYDytdArBX/Org0r
-w1OeqVzPrpQorXAcsHDR
-=XuE1
+iQIcBAEBCgAGBQJUP7cxAAoJEBANW/tRZuAF7rIP/2bFcnfoWZiGD0CS3OuOsbqq
+XgcpvrR/An6JxHcPx5BQl+RU08uCP0bIgerDbJPmAhJTUqNYePEb7l6TDLLWXcS4
+dETeSeZ4dUs5BytuN8Yjz1oHvd6QYmLZpfP2+I8nzoRVc6dmZQ830mV9o8fYTVIm
+yCHEEMVLOAeyIYQMe1Zr8Dn1XywTKBAp0HPArLBoWFxMfY0Zixxd8rT+S4Nfa5Hu
+miIcDWk36LZykm37RZuF3sgNv5HgN5ldTQx3dr6/YvMc3h/Apfu+DTpR+atHzJE8
+nRSpgTaFgiJslpP27pCPKKmu55vetIkqReSZqJQWUkTxDFA1tfi3LXZfcQll3WAK
+5GW8XHC5KY1ue1tET5i6uBZNEWm1MAJh3nOusuY1kHnwynlbbB7ah/qhwdd9uZKD
+Aw5Hc2b3akBVPISrQhKZxOZFt33NGEKEBeADdZ/O/vHqBVgrPKx1uvu15UWcaZC1
+zTRgndCb4K/vbWwucMMm3RgNYiVUQKpvfducz8XtmYKza+meSRECTZ8FfD5HM6Dm
+SQLZUV6J7ReL12g/liX5btdfXclNS9ZRNSgdVZI4o3y1UyYcMUPOKQFD1yoV23yo
+7dschOykgOLlF36iVijtRRrYR36/O2xrqqS1RzrA3ti7rqKBEOnxp22FqByN2ME4
+WpOriB88+vyWzRkO+UZZ
+=+qW3
 -----END PGP SIGNATURE-----
